binrw/tests/ui/invalid_map_return_type.stderr
error[E0308]: mismatched types
 --> $DIR/invalid_map_return_type.rs:5:20
  |
5 |     #[br(map = |_| 0u8)]
  |                    ^^^ expected `i32`, found `u8`
  |
help: change the type of the numeric literal from `u8` to `i32`
  |
5 |     #[br(map = |_| 0i32)]
  |                    ~~~~
